--- a/app/views/my/_section_media_resources.html.haml
+++ b/app/views/my/_section_media_resources.html.haml
@@ -1,1 +1,3 @@
-= deco('polybox', mods: 'active', media_resources: get.send(section_name))
+- mods = ['active']
+- mods << 'unpaginated' if local_assigns[:show_pagination_nav] == false
+= deco('polybox', mods: mods, media_resources: get.send(section_name))
