--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -20,7 +20,7 @@
                  locals: { sections: @sections,
                            section_name: section_id,
                            get: @get,
-                           use_pagination: false }
+                           show_pagination_nav: false }
   - if dashboard_content
     = dashboard_content
   - else
