--- a/app/views/my/_section_media_resources.html.haml
+++ b/app/views/my/_section_media_resources.html.haml
@@ -1,3 +1,3 @@
 - mods = ['active']
 - mods << 'unpaginated' if local_assigns[:show_pagination_nav] == false
-= deco('polybox', mods: mods, media_resources: get.send(section_name))
+= deco('polybox', mods: mods, media_resources: section[:resources])
