--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -12,15 +12,11 @@
   - dashboard_content = capture_haml do
     -# each section: build a title and render the partial
     - @sections.each do |section_id, section|
-      - if section[:partial] == :media_resources and @get.send(section_id).any?
-        = combo('resources-header', title: section[:title],
-                  link: { text: 'show all',
-                          href: my_dashboard_section_path(section_id)})
-        = render partial: "my/section_#{section[:partial]}",
-                 locals: { sections: @sections,
-                           section_name: section_id,
-                           get: @get,
-                           show_pagination_nav: false }
+      = combo('resources-header', title: section[:title],
+                link: { text: 'show all',
+                        href: my_dashboard_section_path(section[:id])})
+      = render partial: "my/section_#{section[:partial]}",
+               locals: { get: @get, section: section, show_pagination_nav: false }
   - if dashboard_content
     = dashboard_content
   - else
