--- a/app/views/meta_data/edit.html.haml
+++ b/app/views/meta_data/edit.html.haml
@@ -11,7 +11,7 @@
 
   %hr.separator.mini.mvs
 
-  - @get.values.each do |v|
+  - @get.literal_values.each do |v|
     = label_tag(:q, " VALUE ", class: 'title-s')
     = text_field_tag("_value[content][]", v)
   = label_tag(:q, " VALUE ", class: 'title-s')
@@ -23,19 +23,25 @@
     %hr.separator.mini.mvs
     %div
       = label_tag(:q, " MEDIA_ENTRY_ID ", class: 'title-s')
-      = text_field_tag("media_entry_id", @get.media_entry_id, disabled: true)
+      = link_to(@get.media_entry_id, media_entry_path(@get.media_entry_id))
 
   - if @get.collection_id
     %hr.separator.mini.mvs
     %div
       = label_tag(:q, " COLLECTION_ID ", class: 'title-s')
-      = text_field_tag("collection_id", @get.collection_id, disabled: true)
+      = link_to(@get.collection_id, collection_path(@get.collection_id))
 
   - if @get.filter_set_id
     %hr.separator.mini.mvs
     %div
       = label_tag(:q, " FILTER_SET_ID ", class: 'title-s')
-      = text_field_tag("filter_set_id", @get.filter_set_id, disabled: true)
+      = link_to(@get.filter_set_id, filter_set_path(@get.filter_set_id))
+
+  %hr.separator.mini.mvs
 
   = component('button', mods: nil) do
     = "Submit"
+
+  %hr.separator.mini.mvs
+
+  = link_to('Cancel', meta_datum_path(@get.uuid), class: 'button')
