--- a/app/views/application/_app_header.haml
+++ b/app/views/application/_app_header.haml
@@ -14,7 +14,7 @@
     },
 
     # main site menu section, middle
-    menu: component('tabs',
+    menu: component('tabs-bar',
       id: 'example_tabs',
       mods: ['primary', 'large'],
       list: {
