--- a/app/views/styleguide/07_Components/_04_tabs.html.haml
+++ b/app/views/styleguide/07_Components/_04_tabs.html.haml
@@ -32,4 +32,4 @@
     = render_partial('example', { mod: name}) do
       - example[:locals][:mods] = [name]
 
-      = component('tabs', example[:locals])
+      = component('tabs-bar', example[:locals])
