--- a/app/views/styleguide/08_Combos/_03_header.html.haml
+++ b/app/views/styleguide/08_Combos/_03_header.html.haml
@@ -14,7 +14,7 @@
         name: 'Zürcher Hochschule der Künste',
         instance_name: 'Medienarchiv der Künste'
       },
-      menu: component('tabs', {
+      menu: component('tabs-bar', {
         id: 'example_tabs', mods: ['primary', 'large'],
         list: {
           my: {
