--- a/app/views/styleguide/08_Combos/_11_home-claim.html.haml
+++ b/app/views/styleguide/08_Combos/_11_home-claim.html.haml
@@ -40,18 +40,19 @@
 :ruby
   element[:locals][:login] = combo('tabbed-sections', {
     mods: 'pitch-login',
+    interactive: true,
     list: {
       external_login: {
         active: true,
         nav: {
-          mod: 'left',
+          align: 'left',
           text: 'ZHdK-Login'
         },
         content: external_login_form,
       },
       internal_login: {
         nav: {
-          mod: 'right',
+          align: 'right',
           text: 'Externe'
         },
         content: internal_login_form,
