--- a/app/views/my/dashboard.html.haml
+++ b/app/views/my/dashboard.html.haml
@@ -1,4 +1,6 @@
 -# template for the main dashboard (#index-ish)
+- content_for(:title_head) do
+  = "Dashboard - Madek"
 
 - content_for(:page_header) do
   = component('page-header',
